examples/failing/http-client.cz
# Example of how an http client might look
let r = net.http.client;
let res = r("https://example.com", "GET");
let resp = r(
    "https://some.api",
    "POST", {
        "body": "[1,2,3]",
        "headers": {
            "x-foo": "bar"
        }
    }
);
